MCPJVM-610: establish flat aggregate operation baseline